# adirum

./: Cargo.toml  README.md  flake.nix
.cargo/: config.toml
crates/adirum/: Cargo.toml
crates/adirum/src/: block_coords.rs  input_plugin.rs  main.rs  message.rs  render.rs  station_block.rs  ui.rs
crates/adirum/src/render/: render_buffer.rs
crates/adirum/src/render/shapes/: material.rs  thin_neighbor.rs
crates/adirum/src/ui/: diagnostic_bar_widget.rs  message_log_widget.rs  rendered_widget.rs  styles.rs
crates/blocks/: Cargo.toml
crates/blocks/src/: block_coords.rs  lib.rs  nav.rs  station_block.rs
crates/colors/: Cargo.toml
crates/colors/src/: lib.rs
crates/message/: Cargo.toml
crates/message/src/: lib.rs
crates/nav/: Cargo.toml
crates/nav/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: camera.rs  debug_signage.rs  diagnostics.rs  gizmo.rs  lib.rs  render_buffer.rs  shapes.rs
crates/render/src/shapes/: circle.rs  cuboid.rs  line.rs  material.rs  plane.rs  polyline.rs  projected_point.rs  shape_buffer.rs  sign.rs  thin_neighbor.rs
src/: camera.rs  colors.rs  input_plugin.rs  main.rs  message.rs  render.rs  station_block.rs  ui.rs
src/camera/: camera_buffer.rs
src/render/: camera.rs  render_buffer.rs  shapes.rs
src/render/shapes/: circle.rs  cuboid.rs  line.rs  material.rs  plane.rs  shape_buffer.rs  thin_neighbor.rs
src/ui/: diagnostic_bar_widget.rs  rendered_widget.rs  styles.rs
