[package]
name = "adirum"
version = "0.1.0"
edition = "2024"

[dependencies]
blocks = { path = "../blocks" }
colors = { path = "../colors" }
message = { path = "../message" }
render = { path = "../render" }

bevy.workspace = true
bevy_ratatui.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
radix-colors-rs.workspace = true
ratatui.workspace = true

[features]
no-vsync = []
